--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="education">Образование</string>
     <string name="facts">Факты</string>
     <string name="basic">Основное</string>
+    <string name="news">Новости</string>
 </resources>
